objects/ASI_MFM_PO_Line_Item_Capex__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_TR_Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hong Kong DF</fullName>
                </value>
                <value>
                    <fullName>PRC</fullName>
                </value>
                <value>
                    <fullName>Guam</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KD</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_TR_Rec_Type__c</fullName>
        <formula>ASI_MFM_PO__r.ASI_MFM_TR_Rec_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TR Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_TWD_Amount__c</fullName>
        <formula>IF( ASI_MFM_PO__r.ASI_MFM_Exchange_Rate__c &gt; 0,  ASI_MFM_Amount__c / ASI_MFM_PO__r.ASI_MFM_Exchange_Rate__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TWD Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>ASI_MFM_Tax_Code__c</referenceTo>
        <relationshipName>PO_Line_Items_Capex</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Verified_Receipt_Amount__c</fullName>
        <description>FOR JP MFM</description>
        <label>Verified Receipt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Web_Service_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Web Service Failed?</label>
        <type>Checkbox</type>
    </fields>
    <label>PO Line Capex Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>GF_PO_Line</fullName>
        <columns>ASI_MFM_PO__c</columns>
        <columns>ASI_MFM_PO_Status__c</columns>
        <columns>ASI_MFM_List_Item_Description__c</columns>
        <columns>ASI_MFM_Sub_brand_Allocation_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_PO_Line_Item_Capex__c.ASI_MFM_TR_PO_Line_Item</value>
        </filters>
        <filters>
            <field>ASI_MFM_PO_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <label>GF Final PO Line</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>POL{000000}</displayFormat>
        <label>PO Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Line Capex Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_TR_PO_Line_Item</fullName>
        <active>true</active>
        <label>TR PO Line Item</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>